# wintilx

./: .autotools  .cproject  .gitignore  .project  AUTHORS  ChangeLog  Makefile.in  README  README.md  config.h.in  configure  configure.ac
lxpanel.private/: private.h
src/: Makefile.am  Makefile.in  wintilx.c
